--- a/index.html
+++ b/index.html
@@ -67,5 +67,18 @@
     />
     <title>Samotis Svitlana</title>
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <p>Hello, I am</p>
+      <h1>Svitlana Samotis</h1>
+      <h2 class="mb-5">
+        Front-end developer based in Ukraine
+      </h2>
+      <div>
+        <a href="#" class="btn btn-branding"
+          >Contact me</a
+        >
+      </div>
+    </div>
+  </body>
 </html>
