--- a/work.html
+++ b/work.html
@@ -70,35 +70,68 @@
   <body>
     <div class="content-container container">
       <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">
-              Hi, I am Svitlana Samotis
-            </h1>
-            <h2 class="mb-4">
-              Front-end developer based in Ukraine
-            </h2>
-            <p class="mb-5">
-              Far far away, behind the word
-              mountains, far from the countries
-              Vokalia and Consonantia, there live
-              the blind texts. Separated they live
-              in Bookmarksgrove right at the coast
-              of the Semantics, a large language
-              ocean. A small river named Duden
-              flows by
-            </p>
-            <a href="#" class="btn btn-branding"
-              >View My Projects
-            </a>
+        <div class="content">
+          <h1 class="mb-5">
+            Take a look at what I've been working
+            on!
+          </h1>
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <img
+                src="images/yogurt-project.png"
+                alt="Yogurt project"
+                class="img-fluid mb-3 rounded"
+              />
+              <h3 class="text-center m-0">
+                Yogurt Project
+              </h3>
+              <p class="text-center text-muted">
+                Built with HTML and CSS
+              </p>
+            </div>
+            <div class="col-md-6 mb-4">
+              <img
+                src="images/weather-project.png"
+                alt="Weather project"
+                class="img-fluid mb-3 rounded"
+              />
+              <h3 class="text-center m-0">
+                Weather Project
+              </h3>
+              <p class="text-center text-muted">
+                Built with HTML, CSS and
+                JavaScript
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="images/ my-picture.jpeg"
-            alt="Svitlana"
-            class="img-fluid mainPicture"
-          />
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <img
+                src="images/dictionary-project.png"
+                alt="Dictionary project"
+                class="img-fluid mb-3 rounded"
+              />
+              <h3 class="text-center m-0">
+                Dictionary App
+              </h3>
+              <p class="text-center text-muted">
+                Built with React
+              </p>
+            </div>
+            <div class="col-md-6 mb-4">
+              <img
+                src="images/translator.png"
+                alt="Translator project"
+                class="img-fluid mb-3 rounded"
+              />
+              <h3 class="text-center m-0">
+                Translation App
+              </h3>
+              <p class="text-center text-muted">
+                Built with React
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
