--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             alt="Yogurt Project"
           />
         </div>
-        <div class="col">
+        <div class="col mb-5">
           <div class="project-description">
             <h2 class="mb-5">Dictionary App</h2>
             <p class="mb-5 text-muted">
@@ -201,6 +201,52 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p calss="text-muted">
+              Let's work together
+            </p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+        <div
+          class="d-flex justify-content-center mb-5"
+        >
+          <a
+            href="mailto:svitlana.samotis@outlook.com"
+            class="email-link"
+            >svitlana.samotis@outlook.com</a
+          >
+        </div>
+        <div
+          class="social-links d-flex justify-content-center mb-5"
+        >
+          <a
+            href="https://www.instagram.com/svitlanka_s_/"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://github.com/SSwanderlust"
+            target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://twitter.com/TestLifeOne"
+            target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
