--- a/about.html
+++ b/about.html
@@ -65,31 +65,51 @@
       rel="stylesheet"
       href="styles/portfolio.css"
     />
-    <title>About Me</title>
+     <meta
+      name="description"
+      content="Learn more about Svitlana. She is a front-end engineer based in Lviv, Ukraine. She specializes in HTML, CSS and JS"
+    />
+    <title>About Me - Svitlana Samotis</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-        <img
-          src="images/logo.png"
-          class="logo d-none d-md-block"
-          alt="logo"
-        />
-        <img
-          src="images/small-logo.jpg"
-          class="logo d-block d-md-none"
-          alt="logo"
-        />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Portfolio logo"
+          />
+          <img
+            src="images/small-logo.jpg"
+            class="logo d-block d-md-none"
+            alt="Portfolio logo"
+          />
         </a>
         <ul>
           <li>
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
-          <li class="active"><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
+          <li class="active">
+            <a
+              href="about.html"
+              title="About Svitlana"
+              >About</a
+            >
+          </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a
+              href="work.html"
+              title="Svitlana's work"
+              >Work</a
+            >
+          </li>
+          <li>
+            <a
+              href="contact.html"
+              title="Contact Svitlana"
+              >Contact</a
+            >
           </li>
         </ul>
       </nav>
@@ -114,7 +134,7 @@
               ocean. A small river named Duden
               flows by
             </p>
-            <a href="#" class="btn btn-branding"
+            <a href="/work.html" class="btn btn-branding" title="View Projects "
               >View My Projects
             </a>
           </div>
@@ -127,6 +147,69 @@
           />
         </div>
       </div>
+
+      <footer>
+        <div
+          class="contact-box justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h3>Work Inquiry</h3>
+            <p calss="text-muted">
+              Let's work together
+            </p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Svitlana"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+        <div
+          class="d-flex justify-content-center mb-5"
+        >
+          <a
+            href="mailto:svitlana.samotis@outlook.com"
+            class="email-link"
+            title="Email Svitlana"
+            >svitlana.samotis@outlook.com</a
+          >
+        </div>
+        <div
+          class="social-links d-flex justify-content-center mb-5"
+        >
+          <a
+            href="https://www.instagram.com/svitlanka_s_/"
+            target="_blank"
+            title="Instagram Profile"
+          >
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://github.com/SSwanderlust"
+            target="_blank"
+            title="Github Profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://twitter.com/TestLifeOne"
+            target="_blank"
+            title="Twitter Profile"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </div>
+        <p class="text-center mt-5 text-muted">
+          This project was coded by Svitlana
+          Samotis, and it is
+          <a
+            href="https://github.com/SSwanderlust/final-portfolio-project"
+            title="Github Repository"
+            >open-sourced</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
