Personalized content and design of all pages

--- a/about.html
+++ b/about.html
@@ -65,9 +65,9 @@
       rel="stylesheet"
       href="styles/portfolio.css"
     />
-     <meta
+    <meta
       name="description"
-      content="Learn more about Svitlana. She is a front-end engineer based in Lviv, Ukraine. She specializes in HTML, CSS and JS"
+      content="Learn more about Svitlana and her coding jorney. She is a front-end engineer based in Lviv, Ukraine. She specializes in HTML, CSS and JS"
     />
     <title>About Me - Svitlana Samotis</title>
   </head>
@@ -122,27 +122,38 @@
               Hi, I am Svitlana Samotis
             </h1>
             <h2 class="mb-4">
-              Front-end developer based in Ukraine
+              Front-end developer based in Lviv, Ukraine
+              <br />
+              <span class="text-muted">Nice to meet you!</span>
             </h2>
             <p class="mb-5">
-              Far far away, behind the word
-              mountains, far from the countries
-              Vokalia and Consonantia, there live
-              the blind texts. Separated they live
-              in Bookmarksgrove right at the coast
-              of the Semantics, a large language
-              ocean. A small river named Duden
-              flows by
+              My coding journey started after I
+              started working as a Customer
+              Success Manager in an IT product
+              company. Everything that our
+              developers were accomplishing both
+              on the front and back end was
+              fascinating to me so I started
+              digging deeper and learning
+              front-end development on my own. I’m
+              currently seeking new opportunities
+              in front-end development. I’m open
+              to working remotely and have
+              flexible hours. I’m highly skilled
+              in JavaScript and learning React.
             </p>
-            <a href="/work.html" class="btn btn-branding" title="View Projects "
-              >View My Projects
+            <a
+              href="/work.html"
+              class="btn btn-branding"
+              title="View Projects "
+              >See my work
             </a>
           </div>
         </div>
         <div class="col-lg-6">
           <img
             src="images/ my-picture.jpeg"
-            alt="Svitlana"
+            alt="Svitlana's picture"
             class="img-fluid mainPicture"
           />
         </div>
@@ -153,9 +164,10 @@
           class="contact-box justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h3>Work Inquiry</h3>
+            <h3>Let's work together</h3>
             <p calss="text-muted">
-              Let's work together
+              Got a proposal, or just
+              want to say hello? Go ahead.
             </p>
           </div>
           <div>
