--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
     />
     <meta
       name="description"
-      content="Contact Svitlana easily. She is a front-end engineer based in Lviv, Ukraine. She specializes in HTML, CSS and JS"
+      content="Contact Svitlana easily or connect with her in social networks. She is a front-end engineer based in Lviv, Ukraine. She specializes in HTML, CSS and JS"
     />
     <title>
       Contact Svitlana - Svitlana Samotis
@@ -126,6 +126,7 @@
           <p>
             <a
               href="mailto:svitlana.samotis@outlook.com"
+              title="Email Svitlana"
             >
               svitlana.samotis@outlook.com</a
             >
@@ -135,6 +136,7 @@
             <a
               href="https://twitter.com/TestLifeOne"
               target="_blank"
+              title="Go to Twitter"
               >@svitlana</a
             >
           </p>
@@ -143,6 +145,7 @@
             <a
               href="https://www.instagram.com/svitlanka_s_/"
               target="_blank"
+              title="Go to Instagram"
             >
               @svitlanka_s</a
             >
@@ -154,9 +157,10 @@
           class="contact-box justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h3>Work Inquiry</h3>
+            <h3>Let's work together</h3>
             <p calss="text-muted">
-              Let's work together
+              Got a proposal, or just want to say
+              hello? Go ahead.
             </p>
           </div>
           <div>
