--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       content="Svitlana is a front-end engineer based in Lviv, Ukraine. She specializes in HTML, CSS and JS"
     />
     <title>
-      Front-end developer - Svitlana Svitlana
+      Front-end developer - Svitlana Samotis
     </title>
   </head>
   <body>
@@ -83,7 +83,7 @@
             alt="Portfolio logo"
           />
           <img
-            src="images/small-logo.jpg"
+            src="images/small-logo.png"
             class="logo d-block d-md-none"
             alt="Portfolio logo"
           />
@@ -117,7 +117,7 @@
       </nav>
     </div>
     <div class="hero">
-      <p>Hello, I am</p>
+      <p>Hi, I'm</p>
       <h1>Svitlana Samotis</h1>
       <h2 class="mb-5">
         Front-end developer based in Ukraine
@@ -127,40 +127,41 @@
           href="/contact.html"
           class="btn btn-branding"
           title="Contact Svitlana"
-          >Contact me</a
-        >
+          >Contact me 👋🏻
+        </a>
       </div>
     </div>
     <p class="text-center m-5">
-      Featured Project with my best projects be
-      choice to show
+      Some of my latest projects
     </p>
     <div class="container">
       <div class="row mb-5">
-        <div class="col d-none d-lg-block">
+        <div class="col d-none d-lg-block mt-5">
           <img
-            src="images/yogurt-project.png"
-            class="img-fluid"
-            alt="Yogurt Project"
+            src="images/travel-project.png"
+            class="img-fluid zoom"
+            alt="Travel Project"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Travel Project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word
-              mountains, far from the countries
-              Vokalia and Consonantia, there live
-              the blind texts. Separated they live
-              in Bookmarksgrove right at the coast
-              of the Semantics, a large language
-              ocean. A small river named Duden
-              flows by
+              I entered the world of front-end
+              development by gaining some
+              knowledge in HTML, CSS, and
+              JavaScript. I used my knowledge
+              along with my new skills in VS Code,
+              to build a landing page about
+              travelling. The page utilizes
+              JavaScript functions to create user
+              interaction.
             </p>
             <a
-              href="/work.html"
+              href="https://www.shecodes.io/workshops/shecodes-basics-29587952-6f18-4059-8300-9dfe3cfe21c9/projects/998806"
               class="btn btn-branding-outline"
-              title="Svitlanas' Projects"
+              title="Go to Travel Project"
+              target="_blank"
             >
               Learn More</a
             >
@@ -172,19 +173,22 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word
-              mountains, far from the countries
-              Vokalia and Consonantia, there live
-              the blind texts. Separated they live
-              in Bookmarksgrove right at the coast
-              of the Semantics, a large language
-              ocean. A small river named Duden
-              flows by
+              I built a Vanilla JavaScript weather
+              app in SheCodes Plus, an advanced
+              8-week JavaScript coding workshop.
+              Building upon my previously-gained
+              knowledge, I also became skilled in
+              Bootstrap, API’s, real-life
+              development workflow, hosting, and
+              advanced JavaScript. I combined all
+              of these skills to create a
+              fully-functioning weather app.
             </p>
             <a
-              href="/work.html"
+              href="https://www.shecodes.io/workshops/shecodes-plus-3dd88700-ec79-4dc1-b666-f3ae77d16a16/projects/1110220"
               class="btn btn-branding-outline"
-              title="Svitlanas' Projects"
+              title="Go to Weather App"
+              target="_blank"
             >
               Learn More</a
             >
@@ -193,7 +197,7 @@
         <div class="col d-none d-lg-block">
           <img
             src="images/weather-project.png"
-            class="img-fluid"
+            class="img-fluid zoom"
             alt="Weather Project"
           />
         </div>
@@ -201,28 +205,26 @@
       <div class="row">
         <div class="col d-none d-lg-block">
           <img
-            src="images/dictionary-project.png"
-            class="img-fluid"
-            alt="Dictionary Project"
+            src="images/portfolio-project.png"
+            class="img-fluid zoom"
+            alt="Portfolio Project"
           />
         </div>
         <div class="col mb-5">
           <div class="project-description">
-            <h2 class="mb-5">Dictionary App</h2>
+            <h2 class="mb-5">Portfolio</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word
-              mountains, far from the countries
-              Vokalia and Consonantia, there live
-              the blind texts. Separated they live
-              in Bookmarksgrove right at the coast
-              of the Semantics, a large language
-              ocean. A small river named Duden
-              flows by
+              I made this portfolio as my SheCodes
+              Responsive final project. For this
+              project I used HTML, CSS, Bootstrap,
+              GitHub, Netlify, FontAwesome, Responsive design,
+              SEO, Flexbox and VS Code.
             </p>
             <a
-              href="/work.html"
+              href="https://peppy-boba-19f909.netlify.app/"
+              target="_blank"
               class="btn btn-branding-outline"
-              title="Svitlanas' Projects"
+              title="Go to Portfolio"
             >
               Learn More</a
             >
@@ -234,9 +236,10 @@
           class="contact-box justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h3>Work Inquiry</h3>
+            <h3>Let's work together</h3>
             <p calss="text-muted">
-              Let's work together
+              Got a proposal, or just
+              want to say hello? Go ahead.
             </p>
           </div>
           <div>
