--- a/work.html
+++ b/work.html
@@ -65,11 +65,13 @@
       rel="stylesheet"
       href="styles/portfolio.css"
     />
-     <meta
+    <meta
       name="description"
-      content="View Svitlanas' projects. She is a front-end engineer based in Lviv, Ukraine. She specializes in HTML, CSS and JS"
+      content="View recent projects made by Svitlana. She is a front-end engineer based in Lviv, Ukraine. She specializes in HTML, CSS and JS"
     />
-    <title>Work portfolio - Svitlana Samotis</title>
+    <title>
+      Work portfolio - Svitlana Samotis
+    </title>
   </head>
   <body>
     <div class="container">
@@ -118,60 +120,57 @@
       <div class="row">
         <div class="content">
           <h1 class="mb-5">
-            Take a look at what I've been working
-            on!
+            A small gallery of my recent projects
           </h1>
           <div class="row">
             <div class="col-md-6 mb-4">
               <img
-                src="images/yogurt-project.png"
-                alt="Yogurt project"
-                class="img-fluid mb-3 rounded"
+                src="images/travel-project.png"
+                alt="Travel project"
+                class="img-fluid mb-3 rounded zoom"
               />
               <h3 class="text-center m-0">
-                Yogurt Project
+                Travel Project
               </h3>
               <p class="text-center text-muted">
-                Built with HTML and CSS
+                Built with HTML, CSS and basic JavaScript
               </p>
             </div>
             <div class="col-md-6 mb-4">
               <img
                 src="images/weather-project.png"
                 alt="Weather project"
-                class="img-fluid mb-3 rounded"
+                class="img-fluid mb-3 rounded zoom"
               />
               <h3 class="text-center m-0">
                 Weather Project
               </h3>
               <p class="text-center text-muted">
                 Built with HTML, CSS and
-                JavaScript
+                JavaScript 
               </p>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 mb-4">
               <img
-                src="images/dictionary-project.png"
-                alt="Dictionary project"
-                class="img-fluid mb-3 rounded"
+                src="images/portfolio-project.png"
+                alt="Portfolio project"
+                class="img-fluid mb-3 rounded zoom"
               />
               <h3 class="text-center m-0">
-                Dictionary App
+                Portfolio
               </h3>
               <p class="text-center text-muted">
-                Built with React
+                Built with HTML and CSS
               </p>
             </div>
             <div class="col-md-6 mb-4">
-              <img
-                src="images/translator.png"
-                alt="Translator project"
-                class="img-fluid mb-3 rounded"
-              />
+              <p class="mt-5 text-center">
+                Coming soon... 🥳
+              </p>
               <h3 class="text-center m-0">
-                Translation App
+                Dictionary App
               </h3>
               <p class="text-center text-muted">
                 Built with React
@@ -185,9 +184,10 @@
           class="contact-box justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h3>Work Inquiry</h3>
+            <h3>Let's work together</h3>
             <p calss="text-muted">
-              Let's work together
+              Got a proposal, or just want to say
+              hello? Go ahead.
             </p>
           </div>
           <div>
@@ -195,7 +195,7 @@
               href="/contact.html"
               class="btn btn-branding mt-3"
               title="Contact Svitlana"
-              >Contact Me</a
+              >Contact me</a
             >
           </div>
         </div>
