Updated GitHub links

--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,7 @@
             <i class="fa-brands fa-instagram"></i
           ></a>
           <a
-            href="https://github.com/SSwanderlust"
+            href="https://github.com/SvitlanaSamotis"
             target="_blank"
             title="Github Profile"
             ><i class="fa-brands fa-github"></i
@@ -209,7 +209,7 @@
           This project was coded by Svitlana
           Samotis, and it is
           <a
-            href="https://github.com/SSwanderlust/final-portfolio-project"
+            href="https://github.com/SvitlanaSamotis/final-portfolio-project"
             title="Github Repository"
             >open-sourced</a
           >
