--- a/work.html
+++ b/work.html
@@ -83,7 +83,7 @@
             alt="Portfolio logo"
           />
           <img
-            src="images/small-logo.jpg"
+            src="images/small-logo.png"
             class="logo d-block d-md-none"
             alt="Portfolio logo"
           />
